--- a/4.BS_SV_MCMC_Estimation_VaR_Forecast.ipynb
+++ b/4.BS_SV_MCMC_Estimation_VaR_Forecast.ipynb
@@ -364,7 +364,7 @@
    "metadata": {},
    "source": [
     "We start with \n",
-    "$$p(G \\mid h_{1:T}, Y_{1:T}) \\propto p(Y_{1:T} \\mid h_{1:T}, G)p(G)$$"
+    "$$p(G \\mid h_{1:T}, Y_{1:T}) \\propto p(h_{1:T} \\mid Y_{1:T}, G)p(G)$$"
    ]
   },
   {
@@ -544,7 +544,7 @@
     "        # Find first log-volatility:\n",
     "        # Here we need to draw a log-volatility that preceedes it since this value is not included in the length of the time series.\n",
     "        # We assume for it uninformative prior, then likelihood is a normal distribution with mean set to first log-volatility and variance G from previous iteration\n",
-    "        draw_h0 = norm.rvs(loc = h_store[s-1, 0], scale = np.sqrt(G_store[s-1]), size=1) \n",
+    "        draw_h0 = norm.rvs(loc = h_store[s-1, 0], scale = np.sqrt(G_store[s-1]), size=1)\n",
     "        # Then we apply Metropolis-Hastings but with one less term as it doesn't appear in the prior. \n",
     "        X_star = norm.rvs(loc = h_store[s-1, 0], scale = 0.5, size=1) # M-H\n",
     "        R_nom = function0(Y_sim[0], X_star, draw_h0, h_store[s-1, 0+1], G_store[s-1])\n",
